--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd": "^5.0.7",
     "axios": "^1.2.1",
     "history": "^5.3.0",
+    "http-status-codes": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
