--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "m",
+  "name": "streetcode",
+  "author": {
+    "name": "SoftServe IT Academy",
+    "url": "https://career.softserveinc.com/uk-ua/"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +24,8 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -27,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build webpack": "webpack --config ./config/webpack.config.js",
+    "start webpack": "webpack serve"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +54,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "ts-loader": "^9.4.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
