--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "axios": "^1.2.1",
     "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -56,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "css-loader": "^6.7.3",
     "ts-loader": "^9.4.2",
     "webpack": "^5.75.0",
