Added missing 'models' path to webpack config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "@layout/*": ["./src/app/layout/*"],
       "@common/*": ["./src/app/common/*"],
       "@stores/*": ["./src/app/stores/*"],
+      "@models/*": ["./src/models/*"],
     },
     "outDir": "dist",
     "allowJs": true,
