--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "name": "SoftServe IT Academy",
     "url": "https://career.softserveinc.com/uk-ua/"
   },
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,19 +27,17 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "svg-react-loader": "^0.4.6",
+    "svg-url-loader": "^8.0.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build webpack": "webpack --config ./config/webpack.config.js",
-    "start webpack": "webpack serve"
+    "start": "webpack serve --mode development --config config/webpack.dev.js",
+    "build": "webpack --mode development --config config/webpack.dev.js",
+    "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/"
   },
   "eslintConfig": {
     "extends": [
@@ -59,10 +58,17 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/react-slick": "^0.23.10",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
