--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,40 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "baseUrl": "src",
+    "jsx": "react-jsx",
+    "target": "es6",
+    "module": "esnext",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"],
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@fonts/*": ["./src/assets/fonts/*"],
+      "@features/*": ["./src/features/*"],
+      "@api/*": ["./src/app/api/*"],
+      "@layout/*": ["./src/app/layout/*"],
+      "@common/*": ["./src/app/common/*"],
+      "@stores/*": ["./src/app/stores/*"],
+      "@models/*": ["./src/models/*"]
+    },
+    "outDir": "dist",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
-    "noEmit": false,
-    "jsx": "react-jsx"
+    "noEmit": false
   },
+  "files": [
+    "./src/index.d.ts"
+  ],
   "include": [
-    "src"
+    "src",
   ]
 }
