--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
     "jquery": "^3.6.3",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
