--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
