--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@types/react-dom": "^18.0.9",
     "antd": "^5.0.7",
     "axios": "^1.2.1",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
     "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
     "jquery": "^3.6.3",
@@ -44,19 +42,12 @@
   "scripts": {
     "start": "webpack serve --mode development --config config/webpack.dev.js",
     "build": "webpack --mode development --config config/webpack.dev.js",
-    "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/",
-    "lint": "eslint --ext .js,.ts,.tsx ./src",
-    "lint:fix": "eslint --fix --ext .js,.ts,.tsx ./src"
+    "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js}": [
-      "eslint --fix"
     ]
   },
   "browserslist": {
@@ -74,18 +65,9 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/react-slick": "^0.23.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "lint-staged": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
