--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,11 @@
       "@/*": ["./src/*"],
       "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
-      "@images/*": ["./src/assets/images/*"],
-      "@sass/*": ["./src/assets/sass/*"],
       "@fonts/*": ["./src/assets/fonts/*"],
       "@features/*": ["./src/features/*"],
-      "@streetcode/*": ["./src/features/StreetcodePage/*"],
       "@api/*": ["./src/app/api/*"],
       "@layout/*": ["./src/app/layout/*"],
-      "@components/*": ["./src/app/common/components/*"],
-      "@constants/*": ["./src/app/common/constants/*"],
-      "@hooks/*": ["./src/app/common/hooks/*"],
-      "@utils/*": ["./src/app/common/utils/*"],
+      "@common/*": ["./src/app/common/*"],
       "@stores/*": ["./src/app/stores/*"],
       "@models/*": ["./src/models/*"]
     },
@@ -34,13 +28,13 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": false
   },
   "files": [
     "./src/index.d.ts"
   ],
   "include": [
-    "src", ".eslintrc.js"
+    "src",
   ]
 }
