--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,18 @@
       "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@fonts/*": ["./src/assets/fonts/*"],
+      "@sass/*": ["./src/assets/sass/*"],
+      "@images/*": ["./src/assets/images/*"],
       "@features/*": ["./src/features/*"],
+      "@streetcode/*": ["./src/features/StreetcodePage/*"],
       "@api/*": ["./src/app/api/*"],
       "@layout/*": ["./src/app/layout/*"],
-      "@common/*": ["./src/app/common/*"],
       "@stores/*": ["./src/app/stores/*"],
-      "@models/*": ["./src/models/*"]
+      "@models/*": ["./src/models/*"],
+      "@components/*": ["./src/app/common/components/*"],
+      "@hooks/*": ["./src/app/common/hooks/*"],
+      "@constants/*": ["./src/app/common/constants/*"],
+      "@utils/*": ["./src/app/common/utils/*"],
     },
     "outDir": "dist",
     "allowJs": true,
