--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
