--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "axios": "^1.2.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "geojson-world-map": "^0.0.2",
     "http-status-codes": "^2.2.0",
+    "install": "^0.13.0",
     "jquery": "^3.6.3",
+    "leaflet": "^1.9.3",
+    "leaflet-boundary-canvas": "^1.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "npm": "^9.3.0",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
+    "react-leaflet-cluster": "^2.1.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
@@ -71,15 +78,16 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/leaflet": "^1.9.0",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "lint-staged": "^13.1.0",
-    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lint-staged": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
