--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@react-hook/resize-observer": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -74,12 +75,12 @@
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "lint-staged": "^13.1.0",
-    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lint-staged": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
