--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "jquery": "^3.6.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "photoswipe": "^5.3.4",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-image-size": "^2.0.0",
+    "react-photoswipe-gallery": "^2.2.2",
     "react-player": "^2.11.0",
+    "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
     "typescript": "^4.9.4",
@@ -74,12 +79,12 @@
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "lint-staged": "^13.1.0",
-    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lint-staged": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
