--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "slick-carousel": "^1.8.1",
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
+    "swiper": "^8.4.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
