--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.9",
     "antd": "^5.0.7",
     "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "http-status-codes": "^2.2.0",
