Created Lightbox for artgallery

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^2.2.7"
   },
   "scripts": {
     "start": "webpack serve --mode development --config config/webpack.dev.js",
