--- a/package.json
+++ b/package.json
@@ -21,36 +21,27 @@
     "axios": "^1.2.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "geojson-world-map": "^0.0.2",
     "http-status-codes": "^2.2.0",
-    "install": "^0.13.0",
-    "jquery": "^3.6.3",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
-    "photoswipe": "^5.3.4",
-    "npm": "^9.3.0",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-image-size": "^2.0.0",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
-    "react-image-size": "^2.0.0",
-    "react-photoswipe-gallery": "^2.2.2",
     "react-player": "^2.11.0",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.6",
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "webpack serve --mode development --config config/webpack.dev.js",
