--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
@@ -39,6 +40,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
     "typescript": "^4.9.4",
