--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status-codes": "^2.2.0",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
+    "leaflet-gesture-handling": "^1.2.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
