--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet-boundary-canvas": "^1.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
@@ -36,9 +37,10 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-player": "^2.11.0",
     "react-resize-detector": "^7.1.2",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-slider": "^2.0.4",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
@@ -82,6 +84,7 @@
     "@svgr/webpack": "^6.5.1",
     "@types/leaflet": "^1.9.0",
     "@types/react-slick": "^0.23.10",
+    "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "css-loader": "^6.7.3",
