--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
@@ -81,6 +82,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/leaflet": "^1.9.0",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
