--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-icons": "^4.7.1",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
     "react-leaflet": "^4.2.0",
