--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
     "react-leaflet": "^4.2.0",
