--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-player": "^2.11.0",
     "react-remove-scroll": "^2.5.5",
     "react-resize-detector": "^7.1.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
