--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "svg-react-loader": "^0.4.6",
     "svg-url-loader": "^8.0.0",
     "swiper": "^8.4.6",
+    "tinymce": "^6.4.0",
     "typescript": "^4.9.4",
     "yet-another-react-lightbox": "^2.2.7"
   },
@@ -82,6 +83,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
     "@svgr/webpack": "^6.5.1",
     "@types/leaflet": "^1.9.0",
     "@types/react-beautiful-dnd": "^13.1.3",
