--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@react-hook/resize-observer": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
@@ -32,6 +34,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-icons": "^4.8.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
     "react-leaflet": "^4.2.0",
