--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +23,7 @@
     "antd": "^5.0.7",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "dnd-core": "^16.0.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "http-status-codes": "^2.2.0",
@@ -29,6 +33,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-idle-timer": "^4.6.4",
