--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/leaflet": "^1.9.0",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
