--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@react-google-maps/api": "^2.18.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
