--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "axios": "^1.3.4",
-    "date-fns": "^2.29.3",
-    "dnd-core": "^16.0.1",
     "antd": "^5.2.2",
     "antd-img-crop": "^4.9.0",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "dnd-core": "^16.0.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "html-react-parser": "^3.0.12",
@@ -39,11 +39,13 @@
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-google-recaptcha": "^2.1.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
@@ -104,8 +106,8 @@
     "@babel/core": "^7.21.3",
     "@svgr/webpack": "^6.5.1",
     "@types/leaflet": "^1.9.0",
-    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-beautiful-dnd": "^13.1.3",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-slick": "^0.23.10",
     "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
