--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
