--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dnd-core": "^16.0.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "freezeframe": "^5.0.2",
     "html-react-parser": "^3.0.12",
     "http-status-codes": "^2.2.0",
     "leaflet": "^1.9.3",
@@ -46,6 +47,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-freezeframe": "^5.0.2",
     "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
@@ -71,7 +73,6 @@
     "svg-url-loader": "^8.0.0",
     "swiper": "^8.4.6",
     "tinymce": "^6.4.0",
-    "typescript": "^4.9.4",
     "yet-another-react-lightbox": "^2.2.7"
   },
   "scripts": {
@@ -122,7 +123,8 @@
     "lint-staged": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
