--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,11 +35,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
-    "noEmit": false,
-    "lib": [
-      "ES2021.String",
-      "DOM"
-    ]
+    "noEmit": false
   },
   "files": [
     "./src/index.d.ts"
