--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - ./nginx/conf/:/etc/nginx/conf.d/:ro
       - ./certbot/www:/var/www/certbot/:ro
       - ./certbot/conf/:/etc/nginx/ssl/:ro
+    health_check:
+      test: curl --fail http://localhost || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
   backend:
     # awaiting a centralized Docker repo.
     # Already existing image nazarsheremet/streetcode:1607 can be used for now. 
@@ -32,6 +37,11 @@ services:
       - type: bind
         source: /imagestorage
         target: /mnt/data
+    health_check:
+      test: curl --fail http://localhost/api/partners/getAll || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
 volumes:
   backend:
 networks:
