--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-gesture-handling": "^1.2.2",
+    "line-height": "^0.3.1",
     "maplibre-gl": "^2.4.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
