--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^5.2.2",
     "antd-img-crop": "^4.9.0",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "dnd-core": "^16.0.1",
@@ -37,6 +38,7 @@
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-gesture-handling": "^1.2.2",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^2.4.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
