--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "html-react-parser": "^3.0.12",
     "http-status-codes": "^2.2.0",
+    "install": "^0.13.0",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-gesture-handling": "^1.2.2",
@@ -42,6 +43,7 @@
     "maplibre-gl": "^2.4.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "npm": "^10.1.0",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
