--- a/templates/default.conf.template
+++ b/templates/default.conf.template
@@ -15,13 +15,13 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name $FRONTEND_SERVER_NAME;
+    server_name $BACKEND_SERVER_NAME;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
     
-    return 301 https://$FRONTEND_SERVER_NAME;
+    return 301 https://$BACKEND_SERVER_NAME;
 }
 
 server {
@@ -31,6 +31,8 @@ server {
     ssl_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/privkey.pem;
     ssl_trusted_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/fullchain.pem;
+
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://frontend;
@@ -49,6 +51,8 @@ server {
     ssl_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/privkey.pem;
     ssl_trusted_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/fullchain.pem;
+
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://backend;
