--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-draggable": "^4.4.5",
     "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
@@ -117,6 +118,7 @@
     "@types/leaflet": "^1.9.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-helmet": "^6.1.7",
     "@types/react-slick": "^0.23.10",
     "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
