--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       retries: 5
     environment:
       API_URL: ${ENV_API_BACKEND}
-
+      REACT_APP_GOOGLE_ANALYTICS: ${ENV_GOOGLE_ANALYTICS}
   backend:
     image: streetcodeua/streetcode:${DOCKER_TAG_BACKEND}
     pull_policy: always
