--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "html-react-parser": "^3.0.12",
+    "html-to-text": "^9.0.5",
     "http-status-codes": "^2.2.0",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
@@ -115,6 +116,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@svgr/webpack": "^6.5.1",
+    "@types/html-to-text": "^9.0.4",
     "@types/leaflet": "^1.9.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
