--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 /.vscode
 /.pnp
 .pnp.js
@@ -17,6 +18,7 @@
 # production
 /build
 /dist
+/server/dist
 # misc
 .DS_Store
 .env.local
