add dynamic metatags for streetcodes

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
