--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "license": "MIT",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16",
+    "npm": ">=7"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@dnd-kit/core": "^6.0.8",
@@ -83,6 +87,7 @@
     "yet-another-react-lightbox": "^2.2.7"
   },
   "scripts": {
+    "preinstall": "npm i --save-dev check-node-version && check-node-version --package",
     "start": "webpack serve --define-process-env-node-env development --config config/webpack.dev.js",
     "start:prod": "webpack serve --define-process-env-node-env production --config config/webpack.prod.js",
     "build": "webpack --define-process-env-node-env production --config config/webpack.prod.js",
@@ -125,6 +130,7 @@
     "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "check-node-version": "^4.2.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
