--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-leaflet-vector-tile-layer": "^0.2.0",
     "react-map-gl": "^7.0.21",
     "react-player": "^2.11.0",
+    "react-quill": "^2.0.0",
     "react-remove-scroll": "^2.5.5",
     "react-resize-detector": "^7.1.2",
     "react-responsive": "^9.0.2",
