--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/history": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/jsdom": "^21.1.5",
     "@types/node": "^20.3.1",
