--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "maplibre-gl": "^2.4.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "quill": "^1.3.7",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-awesome-ticker": "^1.0.0",
@@ -127,6 +128,7 @@
     "@svgr/webpack": "^6.5.1",
     "@types/html-to-text": "^9.0.4",
     "@types/leaflet": "^1.9.0",
+    "@types/quill": "^2.0.14",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-helmet": "^6.1.7",
