--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "@react-google-maps/api": "^2.18.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/googlemaps": "^3.43.3",
-    "@types/jest": "^27.5.2",
     "@types/maplibre-gl": "^1.14.0",
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
@@ -45,7 +43,6 @@
     "leaflet-gesture-handling": "^1.2.2",
     "lodash": "^4.17.21",
     "maplibre-gl": "^2.4.0",
-    "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
@@ -82,7 +79,6 @@
     "svg-url-loader": "^8.0.0",
     "swiper": "^8.4.6",
     "tinymce": "^6.4.0",
-    "ts-jest": "^29.1.1",
     "typescript": "^4.9.4",
     "yet-another-react-lightbox": "^2.2.7"
   },
@@ -94,7 +90,8 @@
     "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/",
     "lint": "eslint --ext \".js,.ts,.tsx\" --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --coverage"
+    "test": "jest",
+    "test:cover": "npm test -- --coverage --watchAll=false"
   },
   "eslintConfig": {
     "extends": [
@@ -121,10 +118,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/react": "^14.1.2",
     "@types/html-to-text": "^9.0.4",
+    "@types/jest": "^29.5.11",
     "@types/leaflet": "^1.9.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
@@ -144,9 +144,11 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.1.0",
+    "mobx-react": "^9.1.0",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.2.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "url-loader": "^4.1.1",
