--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "leaflet-gesture-handling": "^1.2.2",
     "lodash": "^4.17.21",
     "maplibre-gl": "^2.4.0",
+    "mobx": "^6.12.0",
     "mobx-react-lite": "^3.4.0",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
