--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 /.vscode
 /.pnp
 .pnp.js
@@ -17,7 +18,9 @@
 # production
 /build
 /dist
+/server/dist
 /config/dist
+
 # misc
 .DS_Store
 .env.local
