--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.0.2",
     "lint-staged": "^13.1.0",
     "mobx-react": "^9.1.0",
     "react-test-renderer": "^18.2.0",
