add frontend caching with react-query

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@react-google-maps/api": "^2.18.1",
     "@react-hook/resize-observer": "^1.2.6",
+    "@tanstack/react-query": "^5.17.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
@@ -125,6 +126,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@svgr/webpack": "^6.5.1",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "@testing-library/react": "^14.1.2",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.11",
