--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "start": "webpack serve --define-process-env-node-env development --config config/webpack.dev.js",
     "start:prod": "webpack serve --define-process-env-node-env production --config config/webpack.prod.js",
     "build": "webpack --define-process-env-node-env production --config config/webpack.prod.js",
-    "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/",
+    "serve:prod": "webpack --define-process-env-node-env production --config config/webpack.prod.js && serve ./dist",
     "lint": "eslint --ext \".js,.ts,.tsx\" --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
@@ -139,6 +139,7 @@
     "@typescript-eslint/parser": "^5.48.0",
     "babel-jest": "^29.7.0",
     "check-node-version": "^4.2.1",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
