--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,20 @@
-server {
-  listen 80;
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
-  error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root  /usr/share/nginx/html;
-  }
+worker_processes 1;
+
+events {
+    worker_connections 2048;
+}
+
+http {
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://localhost:4000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 }
