--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@react-google-maps/api": "^2.18.1",
     "@react-hook/resize-observer": "^1.2.6",
-    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query": "^5.18.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
@@ -25,6 +25,8 @@
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "antd": "^5.2.2",
     "antd-img-crop": "^4.9.0",
     "axios": "^1.3.4",
