--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,11 @@ jobs:
     
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
-      with: 
-        token: ${{ secrets.SONAR_TOKEN }}
-        host.url: https://sonarcloud.io
-        projectKey: ita-social-projects_StreetCode_Client
-        organization: ita-social-projects
-        projectName: StreetCode_Client
-        projectDescription: Fronted app of Street Code project
-        sources: src/
-
-
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: https://sonarcloud.io
+        INPUT_PROJECTKEY: ita-social-projects_StreetCode_Client
+        INPUT_ORGANIZATION: ita-social-projects
+        INPUT_PROJECTNAME: StreetCode_Client
+        INPUT_PROJECTDESCRIPTION: Fronted app of Street Code project
+        INPUT_SOURCES: /src
