feat: add ExposedHeaders for docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       STREETCODE_CORS__AllowedOrigins: ${CORS_ALLOWED_ORIGINS}
       STREETCODE_CORS__AllowedHeaders: ${CORS_ALLOWED_HEADERS}
       STREETCODE_CORS__AllowedMethods: ${CORS_ALLOWED_METHODS}
+      STREETCODE_CORS__ExposedHeaders: ${CORS_EXPOSED_HEADERS}
       STREETCODE_CORS__PreflightMaxAge: "600"
       STREETCODE_IPRATELIMITING__GENERALRULES__0__LIMIT: 500
       ASPNETCORE_ENVIRONMENT: ${SWAGGER_APP_ENVIRONMENT}
