feat: add exclusions in sonar-scanner.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectDescription=Fronted app of Street Code project
 sonar.host.url=https://sonarcloud.io
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.sources=src/
+sonar.coverage.exclusions=src/**/*test*,src/**/*spec*
